CostalCloud/force-app/main/default/objects/Door__c.object
<CustomObject>
    <label>Door</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Door Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>