CostalCloud/force-app/main/default/objects/Door__c/fields/Door_Height__c.field-meta.xml
<CustomField>
    <fullName>Door_Height__c</fullName>
    <label>Door Height</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>48&quot;</fullName>
            </value>
            <value>
                <fullName>49&quot;</fullName>
            </value>
            <value>
                <fullName>50&quot;</fullName>
            </value>
            <value>
                <fullName>51&quot;</fullName>
            </value>
            <value>
                <fullName>52&quot;</fullName>
            </value>
            <value>
                <fullName>53&quot;</fullName>
            </value>
            <value>
                <fullName>54&quot;</fullName>
            </value>
            <value>
                <fullName>55&quot;</fullName>
            </value>
            <value>
                <fullName>56&quot;</fullName>
            </value>
            <value>
                <fullName>57&quot;</fullName>
            </value>
            <value>
                <fullName>58&quot;</fullName>
            </value>
            <value>
                <fullName>59&quot;</fullName>
            </value>
            <value>
                <fullName>60&quot;</fullName>
            </value>
            <value>
                <fullName>61&quot;</fullName>
            </value>
            <value>
                <fullName>62&quot;</fullName>
            </value>
            <value>
                <fullName>63&quot;</fullName>
            </value>
            <value>
                <fullName>64&quot;</fullName>
            </value>
            <value>
                <fullName>65&quot;</fullName>
            </value>
            <value>
                <fullName>66&quot;</fullName>
            </value>
            <value>
                <fullName>67&quot;</fullName>
            </value>
            <value>
                <fullName>68&quot;</fullName>
            </value>
            <value>
                <fullName>69&quot;</fullName>
            </value>
            <value>
                <fullName>70&quot;</fullName>
            </value>
            <value>
                <fullName>71&quot;</fullName>
            </value>
            <value>
                <fullName>72&quot;</fullName>
            </value>
            <value>
                <fullName>73&quot;</fullName>
            </value>
            <value>
                <fullName>74&quot;</fullName>
            </value>
            <value>
                <fullName>75&quot;</fullName>
            </value>
            <value>
                <fullName>76&quot;</fullName>
            </value>
            <value>
                <fullName>77&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>