CostalCloud/force-app/main/default/objects/Door__c/fields/Door_Left__c.field-meta.xml
<CustomField>
    <fullName>Door_Left__c</fullName>
    <label>Door Left</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>