CostalCloud/force-app/main/default/objects/Door__c/fields/Door_Left_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Door_Left_Fraction__c</fullName>
    <label>Door Left Fraction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fraction_values</valueSetName>
    </valueSet>
</CustomField>