CostalCloud/force-app/main/default/objects/Door__c/fields/Door_Measurement_Image__c.field-meta.xml
<CustomField>
    <fullName>Door_Measurement_Image__c</fullName>
    <label>Door Measurement Image</label>
    <type>TextArea</type>
</CustomField>