CostalCloud/force-app/main/default/objects/Door__c/fields/Door_Notes__c.field-meta.xml
<CustomField>
    <fullName>Door_Notes__c</fullName>
    <label>Door Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>