CostalCloud/force-app/main/default/objects/Door__c/fields/Door_Photo__c.field-meta.xml
<CustomField>
    <fullName>Door_Photo__c</fullName>
    <label>Door Photo</label>
    <type>TextArea</type>
</CustomField>