CostalCloud/force-app/main/default/objects/Door__c/fields/Door_Right__c.field-meta.xml
<CustomField>
    <fullName>Door_Right__c</fullName>
    <label>Door Right</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>