CostalCloud/force-app/main/default/objects/Door__c/fields/Door_Width__c.field-meta.xml
<CustomField>
    <fullName>Door_Width__c</fullName>
    <label>Door Width</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>16&quot;</fullName>
            </value>
            <value>
                <fullName>17&quot;</fullName>
            </value>
            <value>
                <fullName>18&quot;</fullName>
            </value>
            <value>
                <fullName>19&quot;</fullName>
            </value>
            <value>
                <fullName>20&quot;</fullName>
            </value>
            <value>
                <fullName>21&quot;</fullName>
            </value>
            <value>
                <fullName>22&quot;</fullName>
            </value>
            <value>
                <fullName>23&quot;</fullName>
            </value>
            <value>
                <fullName>24&quot;</fullName>
            </value>
            <value>
                <fullName>25&quot;</fullName>
            </value>
            <value>
                <fullName>26&quot;</fullName>
            </value>
            <value>
                <fullName>27&quot;</fullName>
            </value>
            <value>
                <fullName>28&quot;</fullName>
            </value>
            <value>
                <fullName>29&quot;</fullName>
            </value>
            <value>
                <fullName>30&quot;</fullName>
            </value>
            <value>
                <fullName>31&quot;</fullName>
            </value>
            <value>
                <fullName>32&quot;</fullName>
            </value>
            <value>
                <fullName>33&quot;</fullName>
            </value>
            <value>
                <fullName>34&quot;</fullName>
            </value>
            <value>
                <fullName>35&quot;</fullName>
            </value>
            <value>
                <fullName>36&quot;</fullName>
            </value>
            <value>
                <fullName>37&quot;</fullName>
            </value>
            <value>
                <fullName>38&quot;</fullName>
            </value>
            <value>
                <fullName>39&quot;</fullName>
            </value>
            <value>
                <fullName>40&quot;</fullName>
            </value>
            <value>
                <fullName>41&quot;</fullName>
            </value>
            <value>
                <fullName>42&quot;</fullName>
            </value>
            <value>
                <fullName>43&quot;</fullName>
            </value>
            <value>
                <fullName>44&quot;</fullName>
            </value>
            <value>
                <fullName>45&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>